[project]
name = "dataflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-clickhouse>=1.9.2",
    "dbt-core>=1.10.4",
    "dbt-postgres>=1.9.0",
]

[tool.uv.workspace]
members = [
    "dagster_project",
    "dbt_project",
    "dlt_project",
]
