[project]
name = "dataflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.2",
    "dagster-dbt>=0.27.2",
    "dagster-dlt>=0.27.2",
    "dagster-webserver>=1.11.2",
    "dbt-clickhouse>=1.9.2",
    "dbt-core>=1.10.4",
    "dbt-postgres>=1.9.0",
]

[tool.uv.workspace]
members = [
    "dagster_project",
    "dbt_project",
    "dlt_project",
]
